Use a more sensible version number (fixes #3)

--- a/configure.ac
+++ b/configure.ac
@@ -223,7 +223,7 @@ dnl   Revision 1.2  2001/12/02 18:32:05  pouaite
 dnl   update suite à la modif sur http.c et a la generation automatique de src/default*.h
 dnl
 
-AC_INIT(wmcoincoin, 2.6.1, triton@kumal.info)
+AC_INIT(wmcoincoin, 2.6.4-git, triton@kumal.info)
 AC_CONFIG_SRCDIR([src/wmcoincoin.c])
 
 AC_PREREQ(2.52)
