Move pkg-config and imlib2-config calls into configure

--- a/configure.ac
+++ b/configure.ac
@@ -498,6 +498,7 @@ fi;
 
 WMCOINCOIN_PLAYER=""
 if test "x$build_wmcc_player" = "xyes"; then
+  PKG_CHECK_MODULES([x11], [x11])
   AC_CHECK_PROG([IMLIB2_CONFIG_IN_PATH],[imlib2-config],[yes],[no])
   if test "x$IMLIB2_CONFIG_IN_PATH" = "xno"; then
         echo " *********************** YOU ARE NOT READY FOR THE DESKTOP ***********************"
@@ -510,6 +511,10 @@ if test "x$build_wmcc_player" = "xyes"; then
         WMCOINCOIN_PLAYER="wmcoincoin_player${EXEEXT}"
         build_wmcc_player="yes"
         AC_DEFINE(HAVE_WMCOINCOIN_PLAYER,1,[wmcoincoin_player is supported])
+	imlib2_CFLAGS=$( imlib2-config --cflags )
+	imlib2_LIBS=$( imlib2-config --libs )
+	AC_SUBST([imlib2_CFLAGS])
+	AC_SUBST([imlib2_LIBS])
   fi
 dnl  AC_CHECK_PROG([CURL_IN_PATH],[curl],[yes],[no])
 dnl  if test "x$CURL_IN_PATH" = "xno"; then
