--- a/platypus/Makefile.am
+++ b/platypus/Makefile.am
@@ -1,9 +1,8 @@
 bin_PROGRAMS = @WMCOINCOIN_PLAYER@
 EXTRA_PROGRAMS = wmcoincoin_player
 
-LIBS = `imlib2-config --libs`  `pkg-config --libs x11`
+LIBS = $(imlib2_LIBS) $(x11_LIBS)
 
 wmcoincoin_player_SOURCES = fmalloc.c giffunc.c gifread.c wmcoincoin_player.c gif.h
 
-AM_CPPFLAGS = -I. `imlib2-config --cflags`
-
+AM_CPPFLAGS = -I. $(imlib2_CFLAGS) $(x11_CFLAGS)
