Fix wmcoincoin_player build by setting `WMCOINCOIN_PLAYER`
The previous commit, a4eb200a5412 ("imlib2 now uses pkg-config"), removed
the definition of `WMCOINCOIN_PLAYER` which prevents it from being built.

Fixes: a4eb200a5412 ("imlib2 now uses pkg-config")
Signed-off-by: Jeremy Sowden <jeremy@azazel.net>

--- a/configure.ac
+++ b/configure.ac
@@ -478,7 +478,7 @@ fi;
 
 WMCOINCOIN_PLAYER=""
 if test "x$build_wmcc_player" = "xyes"; then
-  PKG_CHECK_MODULES(IMLIB2, [imlib2])
+  PKG_CHECK_MODULES(IMLIB2, [imlib2], [WMCOINCOIN_PLAYER="wmcoincoin_player${EXEEXT}"], [build_wmcc_player=no])
 fi
 AC_SUBST([WMCOINCOIN_PLAYER])
 
