wmcoincoin_player: correct imlib2 pkg-config variables
Commit 09c005edbdae ("Merge pull request #6 from a3a3el/autotooling-updates")
resulted in the wrong pkg-config variable prefix for imlib2 appearing in
platypus/Makefile.am.  Updated it to match what is declared in configure.ac.

Use `LDADD`, not `LIBS`, as recommended by the automake documentation.

Signed-off-by: Jeremy Sowden <jeremy@azazel.net>

--- a/platypus/Makefile.am
+++ b/platypus/Makefile.am
@@ -1,8 +1,8 @@
 bin_PROGRAMS = @WMCOINCOIN_PLAYER@
 EXTRA_PROGRAMS = wmcoincoin_player
 
-LIBS = $(imlib2_LIBS) $(x11_LIBS)
+LDADD = $(IMLIB2_LIBS) $(x11_LIBS)
 
 wmcoincoin_player_SOURCES = fmalloc.c giffunc.c gifread.c wmcoincoin_player.c gif.h
 
-AM_CPPFLAGS = -I. $(imlib2_CFLAGS) $(x11_CFLAGS)
+AM_CPPFLAGS = -I. $(IMLIB2_CFLAGS) $(x11_CFLAGS)
